# shackle

./: Cargo.toml  package-lock.json  package.json  release-plz.toml  rustfmt.toml
.github/workflows/: build-test.yml  gh-pages.yml  release-plz.yml
crates/flatzinc-serde/: CHANGELOG.md  Cargo.toml  README.md
crates/flatzinc-serde/corpus/: documentation_example.debug.txt  documentation_example.debug_ustr.txt  documentation_example.fzn  float_sets.debug.txt  (+4 more)
crates/rangelist/: CHANGELOG.md  Cargo.toml  README.md
crates/rangelist/src/: lib.rs
crates/shackle/: Cargo.toml
crates/shackle-compiler/: Cargo.toml
crates/shackle-fmt/: Cargo.toml
crates/shackle-ls/: Cargo.toml
crates/xcsp3-serde/: CHANGELOG.md  Cargo.toml  README.md
crates/xcsp3-serde/corpus/: knapsack.debug.txt  knapsack.xml  xcsp3_core_ex_1.debug.txt  xcsp3_ex_001.debug.txt  xcsp3_ex_002.debug.txt  xcsp3_ex_002.xml  xcsp3_ex_003.xml  xcsp3_ex_004.debug.txt  xcsp3_ex_004.xml  xcsp3_ex_005.debug.txt  xcsp3_ex_005.xml  xcsp3_ex_006.debug.txt  xcsp3_ex_006.xml  xcsp3_ex_007.debug.txt  xcsp3_ex_007.xml  xcsp3_ex_008.xml  xcsp3_ex_009.xml  xcsp3_ex_010.xml  xcsp3_ex_011.xml  xcsp3_ex_012.xml  xcsp3_ex_013.xml  xcsp3_ex_014.xml  xcsp3_ex_015.xml  xcsp3_ex_016.xml  xcsp3_ex_017.xml  xcsp3_ex_018.debug.txt  xcsp3_ex_018.xml  xcsp3_ex_019.debug.txt  xcsp3_ex_019.xml  xcsp3_ex_020.xml  xcsp3_ex_021.debug.txt  xcsp3_ex_021.xml  xcsp3_ex_022.debug.txt  xcsp3_ex_022.xml  xcsp3_ex_023.debug.txt  xcsp3_ex_023.xml  xcsp3_ex_024.debug.txt  xcsp3_ex_024.xml  xcsp3_ex_025.debug.txt  xcsp3_ex_025.xml  (+212 more)
crates/xcsp3-serde/src/: constraint.rs  expression.rs  lib.rs  objective.rs  parser.rs  variable.rs
crates/xcsp3-serde/src/constraint/: all_different.rs  all_equal.rs  bin_packing.rs  cardinality.rs  channel.rs  circuit.rs  count.rs  cumulative.rs  element.rs  extension.rs  instantiation.rs  intension.rs  knapsack.rs  maximum.rs  mdd.rs  minimum.rs  n_values.rs  no_overlap.rs  ordered.rs  precedence.rs  regular.rs  sum.rs
crates/xcsp3-serde/src/parser/: boolean.rs  identifier.rs  integer.rs  set.rs
editors/code/: package.json
parsers/tree-sitter-datazinc/: Cargo.toml  package.json  tree-sitter.json
parsers/tree-sitter-eprime/: Cargo.toml  package.json  tree-sitter.json
parsers/tree-sitter-minizinc/: Cargo.toml  package.json  pyproject.toml  setup.py  tree-sitter.json
parsers/tree-sitter-minizinc/bindings/python/tree_sitter_minizinc/: __init__.py
parsers/tree-sitter-minizinc/bindings/rust/: build.rs
parsers/tree-sitter-minizinc/src/: grammar.json  node-types.json  parser.c
(+68 files in other folders)
