[workspace]
members = [
  "crates/flatzinc-serde",
  "crates/shackle",
  "crates/shackle-cli",
  "crates/shackle-compiler",
  "crates/shackle-fmt",
  "crates/shackle-ls",
	"crates/xcsp3-serde",
	"parsers/tree-sitter-datazinc",
	"parsers/tree-sitter-eprime",
	"parsers/tree-sitter-minizinc",
]
resolver = "2"
