[package]
name = "xcsp3-serde"
version = "0.1.0"
description = "XCSP3 serialization and deserialization"
authors = ["Jip J. Dekker <jip@dekker.one>"]

homepage = "https://www.minizinc.org/"
repository = "https://github.com/shackle-rs/shackle/"
license = "MPL-2.0"
keywords = ["XCSP3", "serde", "optimization", "serialization"]
exclude = ["/corpus"]

edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
flatzinc-serde = { version = "0.3" }
nom = "7.1.3"

[dev-dependencies]
quick-xml = { version = "0.32.0", features = ["serialize", "overlapped-lists"] }
expect-test = "1.4"

[lints]
workspace = true
